# beyond

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  CPPLINT.cfg  Doxyfile  LICENSE.APLv2  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
subprojects/libbeyond/: CMakeLists.txt  beyond-common.pc.in  beyond.pc.in  build.gradle
subprojects/libbeyond-android/: CMakeLists.txt  README.md  build.gradle
subprojects/libbeyond-android/src/main/: AndroidManifest.xml
subprojects/libbeyond-authenticator_ssl/: CMakeLists.txt  beyond-authenticator_ssl.pc.in  build.gradle
subprojects/libbeyond-authenticator_ssl/include/: authenticator.h  authenticator_event_object.h
subprojects/libbeyond-authenticator_ssl/src/: authenticator.cc  authenticator_android.cc  authenticator_event_object.cc  authenticator_generic.cc  main.cc
subprojects/libbeyond-authenticator_ssl/src/main/: AndroidManifest.xml
subprojects/libbeyond-authenticator_ssl/test/: CMakeLists.txt  ut_authenticator.cc
subprojects/libbeyond-discovery_dns_sd/: CMakeLists.txt  beyond-discovery_dns_sd.pc.in
subprojects/libbeyond-discovery_dns_sd/include/: discovery.h  discovery_android.h  discovery_generic.h
subprojects/libbeyond-discovery_dns_sd/src/: discovery_android.cc  discovery_client.cc  discovery_client.h  discovery_generic.cc  discovery_server.cc  discovery_server.h  discoveryinfo.cc  discoveryinfo.h  main.cc  nsdeventloop.cc  nsdeventloop.h  nsdmanager.cc  nsdmanager.h
subprojects/libbeyond-discovery_dns_sd/src/main/: AndroidManifest.xml
subprojects/libbeyond-discovery_dns_sd/test/: CMakeLists.txt  ut_discovery_dns_sd.cc
subprojects/libbeyond-generic-capi/: CMakeLists.txt
subprojects/libbeyond-generic-capi/include/beyond/: authenticator.h  beyond.h  discovery.h  inference.h  peer.h  runtime.h  session.h
subprojects/libbeyond-generic-capi/src/: authenticator_capi.cc  authenticator_internal.h  beyond_generic_internal.cc  beyond_generic_internal.h  discovery_capi.cc  inference_capi.cc  inference_internal.h  inference_peer_capi.cc  inference_peer_internal.h  inference_runtime_capi.cc  inference_runtime_internal.h  session_capi.cc  session_internal.h
subprojects/libbeyond-generic-capi/test/: CMakeLists.txt  unittest_authenticator.cc  unittest_authenticator_async.cc  unittest_discovery.cc  unittest_peer.cc
subprojects/libbeyond-mock/: CMakeLists.txt  README.md  beyond-mock.pc.in
subprojects/libbeyond-mock/src/: epoll.cc  mock.cc  mock_ctrl.cc  socket.cc  socketpair.cc  timerfd.cc
subprojects/libbeyond-peer_nn/: CMakeLists.txt  README.md
subprojects/libbeyond-peer_nn/cmake/: FindProtobuf.cmake  FindgRPC.cmake
subprojects/libbeyond-peer_nn/include/: main.h  peer.h  peer_event_object.h  peer_grpc_client.h  peer_grpc_client_auth.h  peer_grpc_client_gst.h  peer_grpc_client_gst_sink.h  peer_grpc_client_gst_source.h  peer_grpc_server.h  peer_grpc_server_auth.h  peer_grpc_server_gst.h  peer_model.h
subprojects/libbeyond-peer_nn/protos/: README.md  peer_nn.proto
subprojects/libbeyond-peer_nn/src/: main.cc  peer.cc  peer_event_object.cc  peer_grpc_client.cc  peer_grpc_client_auth.cc  peer_grpc_client_gst.cc  peer_grpc_client_gst_sink.cc  peer_grpc_client_gst_source.cc  peer_grpc_server.cc  peer_grpc_server_auth.cc  peer_grpc_server_gst.cc  peer_model.cc
subprojects/libbeyond-peer_nn/src/main/: AndroidManifest.xml
subprojects/libbeyond-peer_nn/test/: CMakeLists.txt  orange.yuv  pose.yuv  unittest.cc  unittest.h  unittest_peer.cc  unittest_peer_info.cc  unittest_peer_multi.cc  unittest_peer_multi_secured.cc  unittest_peer_secured.cc
subprojects/libbeyond-runtime_tflite/: CMakeLists.txt  build.gradle
subprojects/libbeyond-runtime_tflite/include/: runtime.h
subprojects/libbeyond-runtime_tflite/src/: main.cc  runtime.cc
subprojects/libbeyond-runtime_tflite/src/main/: AndroidManifest.xml
subprojects/libbeyond-tizen-capi/: CMakeLists.txt  beyond-tizen-capi.pc.in
subprojects/libbeyond-tizen-capi/src/: authenticator_capi.cc  authenticator_internal.h  beyond_tizen_internal.cc  beyond_tizen_internal.h  discovery_capi.cc  discovery_internal.h  inference_capi.cc  inference_internal.h  inference_peer_capi.cc  inference_peer_internal.h  inference_runtime_capi.cc
subprojects/libbeyond-tizen-capi/ut/: CMakeLists.txt  unittest_authenticator.cc  unittest_authenticator_async.cc  unittest_discovery.cc  unittest_peer.cc
subprojects/libbeyond/include/beyond/: common.h
subprojects/libbeyond/src/: authenticator.cc  authenticator_impl.cc  authenticator_impl.h  beyond.cc  command_object.cc  discovery.cc  discovery_impl.cc  discovery_impl.h  discovery_runtime.cc  discovery_runtime_impl.cc  discovery_runtime_impl.h  event_loop.cc  event_loop_impl.cc  event_loop_impl.h  event_loop_impl_mac.cc  event_loop_impl_mac.h  event_object.cc  inference.cc  inference_impl.cc  inference_impl.h  inference_impl_distribute.cc  inference_impl_distribute.h  inference_impl_edge.cc  inference_impl_edge.h  inference_impl_event_object.cc  inference_impl_event_object.h  inference_impl_local.cc  inference_impl_local.h  inference_impl_remote.cc  inference_impl_remote.h  inference_peer.cc  inference_peer_impl.cc  inference_peer_impl.h  inference_runtime.cc  inference_runtime_impl.cc  inference_runtime_impl.h  inference_runtime_impl_async.cc  inference_runtime_impl_async.h  resourceinfo_collector.cc  resourceinfo_collector_impl.cc  (+7 more)
subprojects/libbeyond/test/: CMakeLists.txt  unittest.cc  unittest_authenticator.cc  unittest_discovery.cc  unittest_event_loop.cc
subprojects/sample-generic_capi/: CMakeLists.txt  README.md
subprojects/sample-generic_capi/include/: main.h
subprojects/sample-generic_capi/src/: main.c
subprojects/sample-tizen_capi/: CMakeLists.txt  keypoint_extractor.pipeline
subprojects/sample-tizen_capi/src/: main.c
tools/evaluation/: CMakeLists.txt  inference_runner.h  main.cc  remote_peer_runner.cc  remote_peer_runner.h  task_options.cc  task_options.h  task_runner.cc  task_runner.h  tensordata.h  tensordata_util.cc  tensordata_util.h  tflite_runner.cc  tflite_runner.h
(+118 files in other folders)
