CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)
SET(CMAKE_SKIP_BUILD_RPATH true)
PROJECT(${NAME}-main CXX)

IF(NOT DEFINED PROJECT_ROOT_DIR)
    SET(PROJECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
ENDIF(NOT DEFINED PROJECT_ROOT_DIR)

INCLUDE(${PROJECT_ROOT_DIR}/cmake/beyond_prepare.cmake)

SET_PROPERTY(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 0)
SET(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
SET(CMAKE_CXX_STANDARD 17)

# For the generic build which has no gtest
IF(BUILD_GTEST AND ENABLE_GTEST)
    ADD_SUBDIRECTORY(${PROJECT_ROOT_DIR}/third_party/googletest/googletest ${CMAKE_BINARY_DIR}/third_party/googletest/googletest)
ENDIF(BUILD_GTEST AND ENABLE_GTEST)

INCLUDE(${PROJECT_ROOT_DIR}/cmake/build_all_subprojects.cmake)
