CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)
SET(CMAKE_SKIP_BUILD_RPATH true)
PROJECT(${NAME}-runtime_tflite CXX)

IF(CMAKE_SOURCE_DIR STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
    IF(NOT DEFINED PROJECT_ROOT_DIR)
        SET(PROJECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../..)
    ENDIF(NOT DEFINED PROJECT_ROOT_DIR)

    INCLUDE(${PROJECT_ROOT_DIR}/cmake/beyond_prepare.cmake)

    # NOTE
    # We are able to package the following libraries as AAR packages
    IF((BEYOND_LIBRARIES STREQUAL ${NAME}) AND (NOT PROJECT_NAME STREQUAL ${NAME}))
        ADD_SUBDIRECTORY(${PROJECT_ROOT_DIR}/subprojects/libbeyond ${CMAKE_BINARY_DIR}/subprojects/libbeyond)
    ENDIF((BEYOND_LIBRARIES STREQUAL ${NAME}) AND (NOT PROJECT_NAME STREQUAL ${NAME}))
ENDIF(CMAKE_SOURCE_DIR STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")

ADD_DEFINITIONS(-DLOG_TAG="BEYOND_RUNTIME_TFLITE")

IF(PLATFORM STREQUAL "android")
    SET(FLATBUFFERS_BUILD_TESTS OFF CACHE BOOL "Disable flatbuffers test code" FORCE)
    SET(FLATBUFFERS_BUILD_FLATC OFF CACHE BOOL "Disable flat compiler" FORCE)
    SET(FLATBUFFERS_BUILD_FLATHASH OFF CACHE BOOL "Disable flathash" FORCE)
    SET(FLATBUFFERS_BUILD_CPP17 ON CACHE BOOL "Disable flatbuffer installation" FORCE)
    SET(FLATBUFFERS_INSTALL OFF CACHE BOOL "Disable flatbuffer installation" FORCE)
    ADD_SUBDIRECTORY(${PROJECT_ROOT_DIR}/third_party/flatbuffers ${CMAKE_BINARY_DIR}/third_party/flatbuffers)
    ADD_SUBDIRECTORY(${PROJECT_ROOT_DIR}/third_party/tensorflow ${CMAKE_BINARY_DIR}/third_party/tensorflow)

    SET(DEPENDS_ON tensorflow-lite flatbuffers)
    SET(LIBRARIES tensorflow-lite flatbuffers)
ELSE(PLATFORM STREQUAL "android")
    PKG_CHECK_MODULES(RUNTIME_PKGS tensorflow-lite)
    IF(RUNTIME_PKGS_FOUND)
        FOREACH(CFLAG ${RUNTIME_PKGS_CFLAGS})
            SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CFLAG}")
        ENDFOREACH(CFLAG)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
        SET(LIBRARIES ${RUNTIME_PKGS_LDFLAGS})
    ELSE(RUNTIME_PKGS_FOUND)
        SET(FLATBUFFERS_BUILD_TESTS OFF CACHE BOOL "Disable flatbuffers test code" FORCE)
        SET(FLATBUFFERS_BUILD_FLATC OFF CACHE BOOL "Disable flat compiler" FORCE)
        SET(FLATBUFFERS_BUILD_FLATHASH OFF CACHE BOOL "Disable flathash" FORCE)
        SET(FLATBUFFERS_BUILD_CPP17 ON CACHE BOOL "Disable flatbuffer installation" FORCE)
        SET(FLATBUFFERS_INSTALL OFF CACHE BOOL "Disable flatbuffer installation" FORCE)
        ADD_SUBDIRECTORY(${PROJECT_ROOT_DIR}/third_party/flatbuffers ${CMAKE_BINARY_DIR}/third_party/flatbuffers)
        ADD_SUBDIRECTORY(${PROJECT_ROOT_DIR}/third_party/tensorflow ${CMAKE_BINARY_DIR}/third_party/tensorflow)

        SET(DEPENDS_ON tensorflow-lite flatbuffers)
        SET(LIBRARIES tensorflow-lite flatbuffers)
    ENDIF(RUNTIME_PKGS_FOUND)
ENDIF(PLATFORM STREQUAL "android")

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src RUNTIME_TFLITE_SRC)

IF(CMAKE_BUILD_TYPE MATCHES Debug)
    SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,-emain")
ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${RUNTIME_TFLITE_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LOG_LIBRARIES} ${BEYOND_LIBRARIES} ${LIBRARIES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    PUBLIC_HEADER include/${NAME}/plugin/runtime_tflite_plugin.h
)
INSTALL(TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${LIB_INSTALL_DIR}
    PUBLIC_HEADER DESTINATION ${INCLUDE_INSTALL_DIR}/${NAME}/plugin
)

SET(PC_NAME ${PROJECT_NAME})
CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${PKGCONFIG_DIR})
SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_CMAKE_CLEAN_FILES "${PROJECT_NAME}.pc")

ADD_DEPENDENCIES(${PROJECT_NAME} ${DEPENDS_ON_BEYOND} ${DEPENDS_ON})
